Fix scrollbar issue. Working with sidenav-menu removed. Put back prior header, footer
Prepare for debugging problem in sidenav-menu

Fixed issues with scrollbars

--- a/FrontEnd/ClientApp/src/app/dash-sidenav/sidenav-menu/sidenav-menu.scss
+++ b/FrontEnd/ClientApp/src/app/dash-sidenav/sidenav-menu/sidenav-menu.scss
@@ -1,23 +1,6 @@
 @import './breakpoints';
 @import './theme';
 
-.mat-sidenav {
-  width: 360px;
-}
-.mat-sidenav-container {
-  background-color: white !important;
-  height: 100vh;
-}
-.sidenav-toolbar {
-  height: 64px;
-  background-color: mat-color($app-primary);
-  display: flex;
-  flex-direction: row;
-
-  @media (max-width: 600px) {
-    height: 56px;
-  }
-}
 .mat-nav-list {
   padding-top: 0;
 }
@@ -34,9 +17,5 @@
   .mat-drawer {
     padding-top: 56px;
   }
-}
-.version-info {
-  font-size: 8pt;
-  float: right;
-  padding: 8px;
+
 }
