--- a/FrontEnd/ClientApp/src/styles.scss
+++ b/FrontEnd/ClientApp/src/styles.scss
@@ -102,3 +102,8 @@ position: relative;
     visibility: hidden;
   }
 }
+
+.mat-drawer-inner-container,
+.mat-drawer-content{
+   overflow-x: hidden !important;
+}
